--- a/DOCUMENTATION/THESIS.tex
+++ b/DOCUMENTATION/THESIS.tex
@@ -153,7 +153,7 @@ A program elkészítése során a kódolást segítő funkció volt a kódkiegé
 A fejlesztéshez elengedhetetlen a \emph{Java SE 8u40} vagy magasabb verziójú szoftver. Továbbá a fejlesztést nagyban elősegítette a \emph{JavaFX Scene Builder 2.0}, melynek segítségével egyszerűen megtervezhetővé váltak a grafikus felület komponensei.\par
 Végül a telepítési környezet létrehozásához \emph{Ant} és \emph{InnoSetup} eszközök kerültek felhasználásra.
 Az egész projekt, beleértve e dokumentumot is megtalálható, és az egyes verziók visszakövethetők a GitHub-on: \url{https://github.com/marfoldi/SRTNGLGRTHMS}\par
-A program fejlesztése során egyedüli külső függvénykönyvtár a \emph{JUnit} volt, mellyel egységtesztek készültek.
+A program fejlesztése során egyedüli külső függvénykönyvtár a \emph{JUnit} volt, melynek segítségével egységtesztek készültek.
 
 \begin{thebibliography}{widest entry}
 \bibitem{Java}
